--- a/style.sass
+++ b/style.sass
@@ -13,13 +13,14 @@ body, html
 	width: 98vw
 	overflow: hidden
 	border: 1px solid black
+	background-image: linear-gradient(60deg, #abecd6 0%, #fbed96 100%)
 
 #slider
 	position: absolute
 	top: 95%
 	height: 5%
 	width: 20%
-	background: black
+	background-image: linear-gradient(to top, #09203f 0%, #537895 100%)
 	border-radius: 5%
 
 #ball
@@ -27,7 +28,7 @@ body, html
 	width: 30px
 	position: absolute
 	border-radius: 30px
-	background: #656565
+	background-image: linear-gradient(to right, #434343 0%, black 100%)
 
 #brick-container
 	display: flex
@@ -36,5 +37,5 @@ body, html
 .brick
 	height: 5vh
 	width: 10vw
-	background: red
+	background-color: #08AEEA
 	margin: 1vw 1vw 0 1vw
